force-app/main/default/objects/Opportunity/fields/cm_Loan_Assistant__c.field-meta.xml
<CustomField>
    <fullName>cm_Loan_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the loan assistant for the opportunity conversion. Added for the Commercial Accelerate project.</description>
    <label>Loan Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>