force-app/main/default/objects/Opportunity/fields/cm_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>cm_Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the loan officer for the opportunity conversion. Added for the Commercial Accelerate project.</description>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>