force-app/main/default/objects/Opportunity/fields/cm_Ready_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>cm_Ready_to_Convert__c</fullName>
    <description>Used to render a lightning banner and Convert to Product Package action to notify users when the opportunity is ready to be converted. Added for the Commercial Accelerate project.</description>
    <formula>IF(
AND(
NOT(ISPICKVAL(LLC_BI__Product_Line__c, &apos;&apos;)),
NOT(ISPICKVAL(LLC_BI__Product_Type__c, &apos;&apos;)),
NOT(ISPICKVAL(LLC_BI__Product__c, &apos;&apos;)),
NOT(ISBLANK(Amount)),
NOT(ISPICKVAL(Account.Type, &apos;&apos;)),
ISBLANK(LLC_BI__Converted_Date__c)
),
True,
False
)</formula>
    <label>Ready to Convert</label>
    <type>Checkbox</type>
</CustomField>