force-app/main/default/objects/Opportunity/fields/LLC_BI__Competitor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor__c</fullName>
    <description>This picklist field is manually selected and optional. It is used to specify the competitor of the financial institution that the opportunity was lost or could be lost to.</description>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anchor Bank</fullName>
            </value>
            <value>
                <fullName>Associated</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>BMO Harris</fullName>
            </value>
            <value>
                <fullName>BOA</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Fifth Third</fullName>
            </value>
            <value>
                <fullName>First Midwest</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>PNC</fullName>
            </value>
            <value>
                <fullName>The Private Bank</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Wintrust</fullName>
            </value>
            <value>
                <fullName>Smaller Community Bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>