force-app/main/default/objects/Opportunity/fields/LLC_BI__Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Converted_Date__c</fullName>
    <description>This field is automatically populated when an opportunity is converted to nCino. This field will specify the date in which the opportunity was converted.</description>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>