force-app/main/default/objects/Opportunity/fields/LLC_BI__Converted_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Converted_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated when an opportunity is converted to a deposit. It is a lookup field to the deposit record that was converted from the opportunity. It links the opportunity to the product that was converted.</description>
    <label>Converted Deposit</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>