force-app/main/default/objects/Opportunity/fields/LLC_BI__Current_Bank__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current_Bank__c</fullName>
    <description>This field is optional and manually entered. This picklist field is used to specify the current bank at which this opportunity for the account/ relationship may be held.</description>
    <label>Current Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anchor Bank</fullName>
            </value>
            <value>
                <fullName>Associated</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>BMO Harris</fullName>
            </value>
            <value>
                <fullName>BOA</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Fifth Third</fullName>
            </value>
            <value>
                <fullName>First Midwest</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>PNC</fullName>
            </value>
            <value>
                <fullName>The Private Bank</fullName>
            </value>
            <value>
                <fullName>US Bank</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Wintrust</fullName>
            </value>
            <value>
                <fullName>Smaller Community Bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>