force-app/main/default/objects/Opportunity/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated when the opportunity is converted to a loan. This field captures the loan record that the opportunity was converted to. Linking the opportunity to the product that was converted.</description>
    <label>Converted Opportunity</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Converted Opportunity</relationshipLabel>
    <relationshipName>ConvertedOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>