force-app/main/default/objects/Opportunity/fields/LLC_BI__Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is manually selected and will filter based on product line and product type selections. This is a required field to be able to convert to nCino. The field is used to specify the particular product the opportunity is for.  Use either the reference or the picklist field..</description>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>