force-app/main/default/objects/Opportunity/fields/LLC_BI__Products_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Products_Interested_In__c</fullName>
    <description>This field is manually entered and optional. It is a free form text area that allows the user to detail any additional products the relationship/account associated to the existing opportunity may be interested in.</description>
    <label>Products Interested In</label>
    <type>TextArea</type>
</CustomField>