force-app/main/default/objects/Opportunity/recordTypes/LLC_BI__Treasury_Management.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Treasury_Management</fullName>
    <active>true</active>
    <businessProcess>LLC_BI__Treasury Management</businessProcess>
    <description>Select for a New Treasury Management Opportunity</description>
    <label>Treasury Management</label>
</RecordType>