force-app/main/default/objects/Opportunity/listViews/LLC_BI__AllOpportunities.listView-meta.xml
<ListView>
    <fullName>LLC_BI__AllOpportunities</fullName>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>